# Search

./: .gitignore  Cargo.toml  README.md  files.db
search-database/: Cargo.toml
search-database/src/: database.rs  main.rs
search-indexer/: Cargo.toml
search-indexer/src/: indexer.rs  main.rs
search-old/: Cargo.toml
search-old/src/: index.rs
search-ui/: Cargo.toml
search-ui/src/: app.rs  main.rs
search-watcher/: Cargo.toml
src/: app.rs  index.rs  indexer.rs  main.rs  search.rs
