[package]
name = "search"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jwalk = "0.6.0"
memmap2 = "0.5.0"
rayon = "1.5.1"
text_io = "0.1.9"
eframe = "0.14.0" # Gives us egui, epi and web+native backends
serde = { version = "1", features = ["derive"], optional = true }
fuzzy-matcher = "0.3.7"
crossbeam = "0.8.1"

[features]
default = []
persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown
